<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pink2"
    android:padding="24dp"
    tools:context=".MainActivity3">


    <ImageView
        android:id="@+id/coeur"
        android:layout_width="92dp"
        android:layout_height="110dp"
        android:contentDescription="@string/coeur"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/coeur" />

    <Switch
        android:id="@+id/modeSombreSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_edittext"
        android:backgroundTint="@color/pink2"
        android:text="@string/mode_sombre"
        app:layout_constraintBottom_toTopOf="@+id/bienvenue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coeur"
        app:layout_constraintVertical_bias="0.351" />

    <TextView
        android:id="@+id/bienvenue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bienvenue"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/deconnexion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coeur"
        app:layout_constraintVertical_bias="0.112" />

    <Button
        android:id="@+id/deconnexion"
        android:layout_width="153dp"
        android:layout_height="61dp"
        android:backgroundTint="@color/pink"
        android:text="@string/deconnexion"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coeur"
        app:layout_constraintVertical_bias="1.0" />

    <VideoView
        android:id="@+id/videoView"
        android:layout_width="401dp"
        android:layout_height="407dp"
        app:layout_constraintBottom_toTopOf="@+id/deconnexion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bienvenue"
        app:layout_constraintVertical_bias="0.5" />



</androidx.constraintlayout.widget.ConstraintLayout>